# spike.uv

./: .gitignore  README.md
MY/: my.activate  setup
MY/src/projects/foo1/: README.md  pyproject.toml
MY/src/projects/foo1/foo1/: main.py
MY/src/projects/foo1/tests/: test_foo1.py
MY/src/projects/foo3/: README.md  pyproject.toml
MY/src/projects/foo3/tests/: test_foo3.py
MY/src/root/: pytest.ini
